--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,11 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/font-awesome-scss/scss/font-awesome.scss",
+              "./node_modules/bootstrap-scss/bootstrap.scss",
               "src/styles.css"
             ],
-            "scripts": [],
-            "es5BrowserSupport": true
+            "scripts": []
           },
           "configurations": {
             "production": {
