--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot",
-    "start": "node server.js"
+    "postinstall": "ng build --aot --target=production"
   },
   "private": true,
   "dependencies": {
     "@angular-devkit/core": "^7.3.3",
     "@angular/animations": "~7.2.0",
+    "@angular/cli": "~7.2.1",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
@@ -25,18 +27,18 @@
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
     "bootstrap-scss": "^4.2.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "font-awesome-scss": "^1.0.0",
     "jquery": "^3.3.1",
     "ngx-cookie-service": "^2.1.0",
     "ngx-pagination": "^3.2.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
-    "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
@@ -51,11 +53,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "tslint": "~5.11.0"
   },
   "engines": {
-    "node":"8.10.0",
-    "yarn" : "1.13.0"
+    "node": "8.10.0",
+    "npm": "3.5.2"
   }
 }
