--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/compiler-cli": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.3",
+    "@types/node": "~8.9.4",
     "bootstrap-scss": "^4.2.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
@@ -39,7 +39,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "~7.2.1",
+    "@angular/common": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -57,8 +58,6 @@
   },
   "engines": {
     "node": "8.10.0",
-    "npm": "3.5.2",
-    "yarn" : "1.13.0"
-
+    "yarn": "1.13.0"
   }
 }
