--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.3",
     "@angular-devkit/core": "^7.3.3",
     "@angular/animations": "~7.2.0",
     "@angular/cli": "~7.2.1",
